Улучшена документация x1000
